--- a/style.css
+++ b/style.css
@@ -81,7 +81,13 @@
     display: flex;
     flex-direction: column;
 }
-#plus,
+
+#add,
+#subtract {
+    width: 100px;
+    height: 100px;
+    line-height: 100px;
+}
 #equals {
     width: 100px;
     height: 200px;
